--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 <body class="page">
     <div class="page__container">
         <header class="header">
-            <img class="header__logo" src="./images/vector_.svg" alt="Логотип">
+            <img class="header__logo" src="<%=require('./images/logo.svg')%>" alt="Логотип">
         </header>
         <main class="content">
             <section class="profile">
