Верстка счетчика лайка

--- a/src/index.html
+++ b/src/index.html
@@ -82,8 +82,11 @@
             <img class="element__photo" src="" alt="">
             <div class="element__caption">
                 <h3 class="element__name"></h3>
+                <div class="element__hearts">
                 <button class="element__heart" type="button"></button>
-            </div>
+                <p class="element__heart-count">10</p></div>
+                </div>
+            
         </article>
     </template>
 
